# lidar_samples

./: CMakeLists.txt  filename.txt  package.xml
datasets/: Estrutura.txt  FSVH.csv  FSVMT.csv  FSVT.csv  FSVTMT.csv  FinalSamplesH2Trees.csv  FinalSamplesHHouses.csv  FinalSamplesHManyTrees.csv  FinalSamplesHSoTorre.csv  FinalSamplesHTorre2Arvores.csv  FinalSamplesHTorreHouses.csv  FinalSamplesHTorreManyTrees.csv  Results.csv  ResultsV.csv  angle.csv  approach.csv  approachH.csv  approachRH.csv  dadosCorretosCasaCilinder.txt  dadosCorretosCasaWall.txt  dadosCorretosCasaWall2.txt  dadosCorretosCasaWall3.txt  dadosReduzidosCasa.txt  dadosReduzidosSemTorreTrees.txt  resultados1Torre1Arvore.txt  resultados1TorreManyTrees.txt  resultadosCasa.txt  resultadosComTorre.txt  resultadosSemTorreManyTrees.txt  teste.csv
launch/: lidar.launch
models/urdf/: lidar.gazebo.xacro  lidar.urdf.xacro
models/world/: mundo1.world
src/: approach.cpp  approachH.cpp  lidar_samples.cpp  lidar_samples_horizontal.cpp  lidar_samples_vertical.cpp  rn_pose_torres.py  rn_pose_vertical.py  rn_torres.py  svm_pose_horiz.py  svm_pose_torres.py  svm_pose_vert.py  svm_torres.py  svm_torres_horiz.py  svm_torres_vert.py  svn.py
worlds/: House.world  MundoCheioH.world  MundoHouseH.world  MundoSohTorre.world  MundoTorre2Arvores.world  MundoTorreHouses.world  MundoTorreManyTrees.world  NoTower_Trees.world  TowerTrees.world  arvore.dae  mundo1.world  mundo2.world
